# NovaLiveSuite

./: Cargo.toml  README.md  config.json
docs/: _config.yml  index.html
github-pages/: index.html
overlays/: alerts.css  alerts.html  alerts.js  carousel.html  chat.html  nowplaying.css  nowplaying.html  nowplaying.js  polls.css  polls.html  polls.js  worldcup.css  worldcup.html  worldcup.js
src/: main.rs
templates/: index.html
