[package]
name = "OverlayDashboardRust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tray-icon = "0.19"
windows-sys = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
open = "5.1"
tower-http = { version = "0.5", features = ["fs", "cors"] }
futures-util = "0.3"
winreg = "0.52"
windows = { version = "0.52", features = ["Media_Control", "Foundation", "Storage_Streams"] }
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
regex = "1"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
